Fix overflow problem

--- a/src/style/enfield.css
+++ b/src/style/enfield.css
@@ -42,13 +42,16 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
 html {
   font-size: 16px;
   line-height: 1.5;
 }
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, Roboto, "PingFang SC", "Microsoft YaHei", "Noto Sans", "WenQuanYi Micro Hei", sans-serif;
-  overflow-x: hidden;
 }
 @media (min-width: 768px) {
   html {
@@ -234,6 +237,7 @@ tbody tr:nth-child(odd) {
   max-width: 28rem;
   padding: 0 1rem;
   margin: 0 auto;
+  overflow: auto;
 }
 @media (min-width: 576px) {
   .container {
